--- a/ujea.conf
+++ b/ujea.conf
@@ -7,6 +7,7 @@ respawn
 console log
 script
 	URL=amqp://guest:guest@localhost:5672/
+	PARAMS=""
 	test -f /etc/default/ujea && . /etc/default/ujea
-	exec /usr/bin/ujea $URL
+	exec /usr/bin/ujea $URL $PARAMS
 end script
